scrapped page transitions
changing to modals instead of page transitions

--- a/index.html
+++ b/index.html
@@ -15,21 +15,14 @@
 
 </head>
 <body>
-<div class="page-container">
-    
-<h1>Score Card</h1>
-<section>
-    <!-- change to cards that have a button that transitions to the tee page, those are cards that transition to the scorecard page -->
-    <select class="course-select" onchange="getCourseById(this.value)"></select>
-    <select class="tee-select" onchange="getCourseById(this.value)"></select>
-
-
-    <div class="container">
-
-    </div>
-
-    </div>
-</section>
-
+<div class="page-container">   
+    <h1>Score Card</h1>
+    <section>
+        <h2>Course Select</h2>
+            <div class="card-container">                      
+            </div>
+    </section>
+</div>
 </body>
 </html>
+<!-- <select class="course-select" onclick="getCourseById(this.value)"></select> -->
