--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
     <script defer src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script defer rel="script" src="transitions.js"></script>
     <script defer rel="script" src="main.js"></script>
 
 </head>
 <body>
 <div class="page-container">   
-    <h1>Score Card</h1>
     <section>
-        <h2>Course Select</h2>
-            <div class="card-container">                      
-            </div>
+        <div class="modal" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Course Select</h5>
+                    
+                    </div>
+                    <div class="modal-body card-container">
+                      
+                    </div>                 
+                  </div>
+                </div>
+              </div>
     </section>
 </div>
 </body>
 </html>
-<!-- <select class="course-select" onclick="getCourseById(this.value)"></select> -->
+
