implemented tee and player modals

--- a/index.html
+++ b/index.html
@@ -15,21 +15,16 @@
 </head>
 <body>
 <div class="page-container">   
-    <section>
-        <div class="modal" tabindex="-1" role="dialog">
-                <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title">Course Select</h5>
-                    
-                    </div>
-                    <div class="modal-body card-container">
-                      
-                    </div>                 
-                  </div>
+    <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Course Select</h5>            
                 </div>
-              </div>
-    </section>
+                <div class="modal-body card-container"></div>                 
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
