--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script defer rel="script" src="main.js"></script>
+    <script defer rel="script" src="model.js"></script>
+
 
 </head>
 <body>
 <div class="page-container">   
-    <div class="modal" tabindex="-1" role="dialog">
+    <div id="modal-box" class="modal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -24,6 +26,14 @@
                 <div id="modal-container" class="modal-body card-container"></div>                 
             </div>
         </div>
+    </div>
+    <div class="scorecard-container">
+        <div class="player-container"></div>
+        <div class="holes"></div>
+        <div class="par"></div>
+        <div class="yardage"></div>
+        <div class="handicap"></div>
+
     </div>
 </div>
 </body>
