starting on player class

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         </div>
     </div>
     <div class="scorecard-container">
-        <div class="player-container"></div>
-        <div class="holes"></div>
-        <div class="par"></div>
-        <div class="yardage"></div>
-        <div class="handicap"></div>
+        <div id="title-bar"></div>
+        <div id="holes"></div>
+        <div id="par"></div>
+        <div id="yardage"></div>
+        <div id="handicap"></div>
+        <div id="player"></div>
+
 
     </div>
 </div>
