implented scores and calculating totals

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="par"></div>
         <div id="yardage"></div>
         <div id="handicap"></div>
-        <div id="player"></div>
+        <div id="players"></div>
 
 
     </div>
